--- a/app/views/pages/addLink.html.erb
+++ b/app/views/pages/addLink.html.erb
@@ -1,4 +1,14 @@
-<h1>Linx</h1>
-<h2>Add a Link for the Distribution</h2>
-<p>Your submission will be reviewed for curation and inclusion</p>
+
+<div class="row">
+
+	<div class = "col-md-12">
+		<div class ="panel panel-default">
+			<div class="panel-body">
+				<h1>Add a Link for the Distribution</h1>
+				<p>Your submission will be reviewed for curation and inclusion by Santosh</p>
+			</div>
+		</div>
+	</div>
+
+</div>
 
