--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 	<h1>Linx</h1>
 	<h2>A simple link aggregation and sharing tool</h2>
 	<p>
-		<%= link_to "Submit", addLink_path, class: "btn btn-primary" %>
+		<%= link_to "Submit a Link", addLink_path, class: "btn btn-primary" %>
 		<%= link_to "Admin", "#", class: "btn btn-primary" %>
 	</p>
 </div>
