--- a/app/views/pages/addLink.html.erb
+++ b/app/views/pages/addLink.html.erb
@@ -4,8 +4,8 @@
 	<div class = "col-md-12">
 		<div class ="panel panel-default">
 			<div class="panel-body">
-				<h1>Add a Link for the Distribution</h1>
-				<p>Your submission will be reviewed for curation and inclusion by Santosh</p>
+				<h1>About</h1>
+				<p>A simple link aggregation and sharing tool by Muddy Paw Labs</p>
 			</div>
 		</div>
 	</div>
