--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Link</h1>
-<h3>Make sure to include 'http://' in the current version when pasting a link</h3>
+<p><strong>Note:</strong> Please make sure to include 'http://' in the current version when pasting a link. A description is not necessary but if you would like credit for contributing please provide it in the description box.</p>
 <%= render 'form' %>
 
 <%= link_to 'Back', links_path %>
